--- a/app/src/main/res/layout/nearby_restaurants.xml
+++ b/app/src/main/res/layout/nearby_restaurants.xml
@@ -2,63 +2,103 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="5dp"
     android:layout_marginBottom="20dp"
     app:cardCornerRadius="25dp"
-    app:cardElevation="5dp">
+    app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="15dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/ivListNearbyRestaurantImage"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:src="@drawable/sample_rlogo"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvListNearbyRestaurantTitle"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/llTop"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Golden Baboy"
-            android:fontFamily="@font/montserrat"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textSize="18sp"
+            android:layout_marginLeft="15dp"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ivListNearbyRestaurantImage"
-            app:layout_constraintTop_toTopOf="@+id/ivListNearbyRestaurantImage" />
+            app:layout_constraintTop_toTopOf="@+id/ivListNearbyRestaurantImage">
+
+            <TextView
+                android:id="@+id/tvListNearbyRestaurantTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:fontFamily="@font/montserrat"
+                android:text="Golden Baboy"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/ivListNearbyRestaurantImage"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/tvListNearbyRestaurantAddress"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:textColor="@color/restaurantAddressTextColor"
             android:text="Morayta, Metro manila"
-            app:layout_constraintEnd_toEndOf="@+id/tvListNearbyRestaurantTitle"
-            app:layout_constraintStart_toStartOf="@+id/tvListNearbyRestaurantTitle"
-            app:layout_constraintTop_toBottomOf="@+id/tvListNearbyRestaurantTitle" />
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/restaurantAddressTextColor"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/llTop"
+            app:layout_constraintStart_toStartOf="@+id/llTop"
+            app:layout_constraintTop_toBottomOf="@+id/llTop" />
 
         <TextView
             android:id="@+id/tvListNearbyRestaurantSchedule"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/restaurantOpeningTextColor"
             android:text="Open today until 10:00 pm"
+            android:textColor="@color/restaurantOpeningTextColor"
             app:layout_constraintEnd_toEndOf="@+id/tvListNearbyRestaurantAddress"
             app:layout_constraintStart_toStartOf="@+id/tvListNearbyRestaurantAddress"
             app:layout_constraintTop_toBottomOf="@+id/tvListNearbyRestaurantAddress" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="@+id/tvListNearbyRestaurantSchedule"
+            app:layout_constraintStart_toStartOf="@+id/tvListNearbyRestaurantSchedule"
+            app:layout_constraintTop_toBottomOf="@+id/tvListNearbyRestaurantSchedule">
+
+            <ImageView
+                android:layout_width="17dp"
+                android:layout_height="17dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_distance" />
+
+            <TextView
+                android:id="@+id/tvListNearbyRestaurantDistance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="1.3 km away"
+                android:textColor="@color/sideBarViewColor" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
