--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -51,10 +51,10 @@
 
                     <ImageView
                         android:id="@+id/imageView6"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_marginTop="20dp"
-                        android:src="@drawable/icon_queue"
+                        android:src="@drawable/book_queue_icon"
                         app:layout_constraintEnd_toEndOf="@+id/textView31"
                         app:layout_constraintStart_toStartOf="@+id/textView31"
                         app:layout_constraintTop_toBottomOf="@+id/textView31" />
@@ -107,10 +107,10 @@
 
                     <ImageView
                         android:id="@+id/imageView7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_marginTop="20dp"
-                        android:src="@drawable/icon_reserve"
+                        android:src="@drawable/book_reserve_icon"
                         app:layout_constraintEnd_toEndOf="@+id/textView32"
                         app:layout_constraintStart_toStartOf="@+id/textView32"
                         app:layout_constraintTop_toBottomOf="@+id/textView32" />
