--- a/app/src/main/res/layout/fragment_reviews.xml
+++ b/app/src/main/res/layout/fragment_reviews.xml
@@ -11,9 +11,49 @@
         android:paddingBottom="10dp"
         android:layout_height="match_parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/containerNoRating"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="50dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.6"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/no_data_image" />
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="30dp"
+                android:textAlignment="center"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/montserrat"
+                android:text="It seems like this restaurant doesn't have any rating yet"
+                android:textColor="@color/gradient3TopColor"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView8"
+                android:gravity="center_horizontal" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/textView35"
+            android:id="@+id/tvRRHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -35,12 +75,12 @@
             android:textColor="@color/loginColor"
             android:textSize="50sp"
             android:text="4.3"
-            app:layout_constraintEnd_toEndOf="@+id/textView35"
-            app:layout_constraintStart_toStartOf="@+id/textView35"
-            app:layout_constraintTop_toBottomOf="@+id/textView35" />
+            app:layout_constraintEnd_toEndOf="@+id/tvRRHeader"
+            app:layout_constraintStart_toStartOf="@+id/tvRRHeader"
+            app:layout_constraintTop_toBottomOf="@+id/tvRRHeader" />
 
         <TextView
-            android:id="@+id/textView37"
+            android:id="@+id/tvRRO5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/sideBarViewColor"
@@ -64,9 +104,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="(72)"
-            app:layout_constraintEnd_toEndOf="@+id/textView37"
-            app:layout_constraintStart_toStartOf="@+id/textView37"
-            app:layout_constraintTop_toBottomOf="@+id/textView37" />
+            app:layout_constraintEnd_toEndOf="@+id/tvRRO5"
+            app:layout_constraintStart_toStartOf="@+id/tvRRO5"
+            app:layout_constraintTop_toBottomOf="@+id/tvRRO5" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
